public/stylesheets/generic.css
/* Generic "widgets" and text effects */

h1 {
  font-weight: bold;
  font-size: 150%;
  margin-top: .5em;
  margin-bottom: .5em;
}

h2 { 
  font-size: 130%; 
  margin-top: .5em;
  margin-bottom: .5em;
}

h3 { font-weight: bold; }

tt { font-family: proportional; }
em { font-style: italic; }
q:before { content: '\2018'; }
q:after { content: '\2019'; }

dt {
  float: left;
  font-weight: bold;
  padding-right: .5em;
}

dl.details dt {
  width: 15em;
  background-color: #f0f0f0;
  margin-right: .5em;
}

dl, ul {
  margin-left: 2em;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

ul { list-style: disc; }

.book-name, .chapter-number, .verse-number { color: #678090; }
a.sentence-number, .token-number { color: #F7A700; }

/* Rounded info boxes */

.roundedbox {
  background-color: #FCF6EF;
  border: solid 2px #F9EDE1;
  margin-left: 1em;
  margin-right: 1em;
  margin-top: 1em;
  margin-bottom: 1em;
  padding: 1% 0 1% 2%;
  -moz-border-radius: 1em;
}

.roundedbox dl { margin-left: 0px; }
.roundedbox dt { font-weight: bold; }

/* Tables */

table {
  width: 100%;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 1em;
  margin-right: 1em;
  border-spacing: 0;
}

th { text-align: left; }

th[colspan] { text-align: center; }

thead, tfoot { background-color: #f0f0f0; }

/* "Widget": palette */
 
ul.palette { margin: 0; padding: 0; border: 1px solid #999; overflow: hidden; height: auto !important; height: 1%; padding: 4px 5px 0; }
*:first-child+html ul.palette { padding-bottom: 2px; } * html ul.holder { padding-bottom: 2px; } /* ie7 and below */
ul.palette li { float: left; list-style-type: none; margin: 0 5px 4px 0; }
ul.palette li.box { -moz-border-radius: 6px; border: 1px solid #CAD8F3; background: #DEE7F8; padding: 1px 5px 2px; }
ul.palette li.selected { border-color: #598BEC; background: #598BEC; color: white; }
ul.palette abbr { border: none; } /* the dotted abbr default does not look good in palettes */

/* "Widget": tree */

ul.tree, ul.tree ul { list-style-type: none; background: url(/images/vline.png) repeat-y; margin: 0; padding: 0; } 
ul.tree ul { margin-left: 10px; } 
ul.tree li { margin: 0; padding: 0 12px; line-height: 20px; background: url(/images/node.png) no-repeat; } 
ul.tree li:last-child { background: #fff url(/images/lastnode.png) no-repeat; }
ul.tree li.last-child { background: #fff url(/images/lastnode.png) no-repeat; } /* IE only */

/* "Widget": text view */

.text-view { 
  margin-top: 1em;
  line-height: 1.6em; 
  text-align: justify;
  margin-left: 2em;
  margin-right: 2em;
}

.text-view .chapter-number {
  float: left;
  font-family: Georgia, serif;
  font-size: 300%;
  line-height: 0.97em;
  margin-right: 0.07em;
  margin-bottom: -0.25em;
}

@media print {
  .text-view {
    margin-left: 0em;
    margin-right: 0em;
  }
}

/* tabular pages {lemmata, user}::index */

.tabular .pagination { text-align: center; }

.tabular form {
  text-align: center;
  padding: 0 0 0 0;
}

/* Search form */

form.search {
  text-align: center;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

form.search label {
  font-weight: bold;
  width: 0; /* reset */
  float: none; /* reset */
  margin-left: 0.2em;
  margin-right: 0.5em;
}

/* Standard form */

.standard_form {
  background-color: white;
  font: 13.34px helvetica, arial, clean, sans-serif;
  margin: .5em auto 0 auto;
  background-color: #eaf2f5;
  padding: 2em 2em 1em 2em;
  border: 2px solid #ddd;
}

.standard_form h1 {
  font-size: 160%;
  margin-bottom: 1em;
}

.standard_form h1 a {
  font-size: 70%;
  font-weight: normal;
}

.standard_form p { margin: .5em 0; }

.standard_form p.note { color: #a00; }

.standard_form form label, .standard_form form .label {
  font-size: 110%;
  color: #666;
  display: block;
  margin: 0;
  margin-top: 1em;
}

.standard_form form label a { font-size: 90%; }

.standard_form form label.error { color: #a00; }

.standard_form form .label label {
  margin: 0;
  color: black;
  font-size: 95%;
}

.standard_form form .label span {
  font-size: 90%;
  color: #888;
}

.standard_form form input.text, .standard_form form textarea {
  padding: 5px;
  border: 1px solid #888;
}

.standard_form form input.text { font-size: 110%; }

.standard_form form input.submit {
  font-size: 120%;
  padding: .1em 1em;
}

.standard_form form label.error input.text,
.standard_form form label.error textarea {
  border: 1px solid #a00;
  background-color: #f2e1e1;
}
/* Completion rates */

.unannotated, .annotated, .reviewed { padding-right: 18px; }
.unannotated { background: transparent url(/images/cm16red.png) no-repeat center right; }
.annotated { background: transparent url(/images/cm16yellow.png) no-repeat center right; }
.reviewed { background: transparent url(/images/cm16green.png) no-repeat center right; }

/* TODO: move out */
/* Diffs */

del, ins { text-decoration: none; }
.replaced { background-color: #fd8 }
.added, .added-bg { background-color: #bfb; }
.removed, .removed-bg { background-color: #f88; }
.diff ul { margin-left: 0px; }
table.diff { border: 1px solid gray; }
.diff td { width: 30%; }

/* "Layers" */

.layer {
  margin-top: 1em;
  margin-bottom: 1em;
}

h1.layer-title { 
  display: inline;
  display: inline;
}

.layer-content {
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 1em;
  margin-right: 1em;
}

/* TODO: move out */
/* Legends */

div.legend {
 font-size: 75%;
 margin: 1em 0;
 padding: .5em;
 overflow: hidden;
}

.legend h3 { display: none; }

.legend dt {
 border: 1px solid #999;
 float: left;
 margin: .1em .5em .1em 2em;
 width: .8em; height: .8em;
}

.legend dl, .legend dd {
 display: inline;
 float: left;
 padding: 0;
 margin: 0;
 margin-right: .5em;
}

/* Fancy tool-tips */

span.tool {
  position: relative;
  cursor: help;
}
 
span.tool span.tip { display: none; }
 
span.tool:hover span.tip {
  display: block;
  z-index: 100;
  position: absolute;
  top: 2.5em;
  left: 0;
  width: auto;
  line-height: 1.2em;
  padding: 3px 7px 4px 6px;
  border: 1px solid #336;
  background-color: #f7f7ee;
  font-family: arial, helvetica, sans-serif;
  font-size: 12px;
  font-weight: normal;
  color: #000;
  text-align: left;
}

#content span.tool::after {
  padding-left: 2px;
  content: url(/images/bubble.gif);
}

/* Rails kludges */

.actions {
  margin-top: 1em;
  margin-bottom: .5em;
}

@media print {
  .actions { display: none; }
}

.actions form, .actions form div {
  display: inline;
}

form.button-to, .button-to div {
  display: inline;
}

/* Error messages */

#error {
  background: pink;
  padding: .5em;
  border: 1px solid gray;
  width: 100%;
}

#notice {
  background: lime;
  padding: .5em;
  border: 1px solid gray;
}

/* Misc. */

.good { color: green; }
.good-bg { background-color: green; }
.average { color: orange; }
.average-bg { background-color: orange; }
.warning, .bad { color: red; }
.bad-bg { background-color: red; }

.odd { background: #f0f0f0; }
.even { background-color: white; }

abbr {
  font-stretch: condensed;
  border-bottom: dotted orange 1px;
}

.relation { text-transform: uppercase; }

a.token {
  color: black;
  text-decoration: none;
}

.focused { font-weight: bold; }

.book-name { }

.chapter-number { font-weight: bold; }

.verse-number {
  font-weight: bold;
  font-size: 75%;
}

.sentence-number {
  font-weight: bold;
  font-size: 75%;
}

.token-number {
  vertical-align: sub;
  font-size: 60%;
  color: #6F9DBE;
}

.reference {}

.language {}

.foreign-word { font-style: italic; } 

.pagination { text-align: center; }

.annotation-actions {
  clear: both;
  text-align: center;
  margin-top: 1em;
}

.lemma { font-style: italic; }

.chart { text-align: center; }

/* Documentation */

p.doc-img { 
  text-align: center;
  padding-top: .5em;
}

/* message-block: This is for the various error messages, confirmation messages, announcements etc.
   that should appear below the navigation bar and above any view specific content. Set background
   colour to fit the purpose. */
.message-block {
  padding: 1em;
  padding-left: 4em;
  margin-bottom: 1.5em;
}

/* Flash messages */

div.fieldWithError { outline: 1px solid red; }

.flash ul {
  padding-left: 0pt;
  margin-bottom: 0pt;
  list-style-type: none;
  margin-left: 0pt;
}

.flash ul li {
  background: transparent url(/images/silk_icons/bullet_orange.png) no-repeat scroll left center;
  margin-bottom: 0.6em;
  padding-left: 1em;
  vertical-align: top;
}

.flash .error {
  background: #fcf6d0 url(/images/alert_symbol.gif) 1.5em 1.5em no-repeat;
  border-top: 1px solid #ecd757;
  border-bottom: 1px solid #ecd757;
}

.flash .notice {
  /* FIXME */
  /* background: #dee9f4 url(/images/) 1.5em 1em no-repeat; */
  border-top: 1px solid #b4c5d5;
  border-bottom: 1px solid #b4c5d5;
}

.flash .warning {
  /* FIXME */
  /* background: #fcf6d0 url(/images/) 1.5em 1em no-repeat; */
  border-top: 1px solid #ecd757;
  border-bottom: 1px solid #ecd757;
}

